@@ -50,71 +50,6 @@
 #define _LOG_ERR 3
 #define _LOG_FATAL 2
 
-#define VERBOSE_BASE_LEVEL _LOG_WARN
-#define SECURITY_LEVEL 0
-
-void init_log_file(const char *log_file, int append);
-void init_log_direct(const char *log_file, int append);
-void init_log_while_suspended(int log_while_suspended);
-void fin_log(void);
-void release_log_memory(void);
-
-void init_syslog(int facility);
-void fin_syslog(void);
-
-void init_verbose(int level);
-void init_test(int level);
-void init_md_filtering(int level);
-void init_pvmove(int level);
-void init_full_scan_done(int level);
-void init_trust_cache(int trustcache);
-void init_debug(int level);
-void init_cmd_name(int status);
-void init_msg_prefix(const char *prefix);
-void init_indent(int indent);
-void init_ignorelockingfailure(int level);
-void init_lockingfailed(int level);
-void init_security_level(int level);
-void init_mirror_in_sync(int in_sync);
-void init_dmeventd_monitor(int reg);
-void init_ignore_suspended_devices(int ignore);
-void init_error_message_produced(int error_message_produced);
-
-void set_cmd_name(const char *cmd_name);
-
-int test_mode(void);
-int md_filtering(void);
-int pvmove_mode(void);
-int full_scan_done(void);
-int trust_cache(void);
-int debug_level(void);
-int ignorelockingfailure(void);
-int lockingfailed(void);
-int security_level(void);
-int mirror_in_sync(void);
-int ignore_suspended_devices(void);
-int error_message_produced(void);
-
-#define DMEVENTD_MONITOR_IGNORE -1
-int dmeventd_monitor_mode(void);
-
-/* Suppress messages to stdout/stderr (1) or everywhere (2) */
-/* Returns previous setting */
-int log_suppress(int suppress);
-
-/* Suppress messages to syslog */
-void syslog_suppress(int suppress);
-
-typedef void (*lvm2_log_fn_t) (int level, const char *file, int line,
-			       const char *message);
-
-void init_log_fn(lvm2_log_fn_t log_fn);
-
-void print_log(int level, const char *file, int line, const char *format, ...)
-    __attribute__ ((format(printf, 4, 5)));
-
-#define plog(l, x...) print_log(l, __FILE__, __LINE__ , ## x)
-
 #define log_debug(x...) plog(_LOG_DEBUG, x)
 #define log_info(x...) plog(_LOG_INFO, x)
 #define log_notice(x...) plog(_LOG_NOTICE, x)
@@ -123,13 +58,12 @@ void print_log(int level, const char *file, int line, const char *format, ...)
 #define log_fatal(x...) plog(_LOG_FATAL, x)
 
 #define stack log_debug("<backtrace>")	/* Backtrace on error */
-
-#define log_error(args...) log_err(args)
-#define log_print(args...) plog(_LOG_WARN, args)
-#define log_verbose(args...) log_notice(args)
 #define log_very_verbose(args...) log_info(args)
+#define log_verbose(args...) log_notice(args)
+#define log_print(args...) plog(_LOG_WARN, args)
+#define log_error(args...) log_err(args)
 
-/* Two System call equivalents */
+/* System call equivalents */
 #define log_sys_error(x, y) \
 		log_err("%s: %s failed: %s", y, x, strerror(errno))
 #define log_sys_very_verbose(x, y) \
